fixed z-index

--- a/client/views/service-credentials-popup.styl
+++ b/client/views/service-credentials-popup.styl
@@ -5,6 +5,7 @@
   top 0
   left 0
   background-color rgba(0,0,0,0.8)
+  z-index 999999
   #OafServiceCredentialsPopup
     background-color #fff
     margin 10px auto
